REF: gaps for elements with size of scrollbar to fix jump when open popup

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -7,6 +7,7 @@
   }
 
   body {
+    overflow-x: hidden;
 
     @include media-breakpoint-up($desktop-breakpoint) {
       height: 100%;
